--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,9 +5,9 @@ name: tests
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master","development" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "development"]
 
 permissions:
   contents: read
